k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: caseflow
  labels:
    app.kubernetes.io/name: caseflow
